FEAT: Enterprise Companies Grid - Bloomberg/SAP Fiori Design
🎨 Rediseño Completo UI - Nivel Internacional Enterprise:

1. **enterprise-companies-grid.js** (620 líneas) - Nuevo módulo
   ✅ Dark theme professional (#0f2027 → #203a43 → #2c5364)
   ✅ Glassmorphism con backdrop-filter blur
   ✅ Cards modernas (no tabla tradicional)
   ✅ Grid responsive (380px min-width, auto-fill)
   ✅ Hover effects con translateY(-4px)
   ✅ Gradient top border animado

2. **Badges Tecnológicos**:
   ✅ Badge 🤖 AI con animación pulse si usa módulos IA
   ✅ Status badges con gradientes (Active/Trial/Suspended)
   ✅ Colores: #11998e → #38ef7d (active), #f093fb → #f5576c (trial)

3. **Progress Bars Visuales**:
   ✅ Animación shimmer en el fill
   ✅ Gradientes: #667eea → #764ba2
   ✅ Smooth transitions 0.6s cubic-bezier

4. **Métricas Enterprise**:
   ✅ Grid 2x2 con métricas key
   ✅ Employees (activos vs contratados)
   ✅ Plan type & max users
   ✅ Modules progress bar
   ✅ Monthly revenue con IVA

5. **Typography Professional**:
   ✅ Pricing: Courier New monospace, cyan (#00d4ff), 2rem
   ✅ Headers: -0.5px letter-spacing, 700 weight
   ✅ Labels: uppercase, 0.5px letter-spacing

6. **Icon Buttons Compactos**:
   ✅ ✏️ Edit (primary gradient)
   ✅ 👁️ View Details (icon only, 36x36px)
   ✅ 📊 Statistics (icon only)

7. **Responsive Design**:
   ✅ Mobile: 1 columna
   ✅ Tablet+: Auto-fill minmax(380px, 1fr)
   ✅ Metrics: 2 cols → 1 col en mobile

8. **Integración en panel-administrativo.html**:
   ✅ Script cargado antes de </body>
   ✅ Función renderCompaniesTable() reemplazada
   ✅ Fallback a diseño simple si módulo no carga
   ✅ Console logs con prefijo [ENTERPRISE]

📦 Archivos:
- public/js/modules/enterprise-companies-grid.js (NUEVO)
- public/panel-administrativo.html (MODIFICADO)
- replace-render-function.js (script utilitario)
- new-render-function.txt (template)

🎯 Inspiración: Bloomberg Terminal + SAP Fiori + Glassmorphism Trends
📐 Diseño: Mobile-first, Progressive Enhancement
🚀 Performanc

--- a/backend/public/panel-administrativo.html
+++ b/backend/public/panel-administrativo.html
@@ -6269,104 +6269,52 @@
             if (suspendedCompaniesElement) suspendedCompaniesElement.textContent = suspendedCount;
         }
 
-        function renderCompaniesTable() {
-            console.log('🎨 renderCompaniesTable iniciado');
+                function renderCompaniesTable() {
+            console.log('🎨 [ENTERPRISE] renderCompaniesTable iniciado con diseño Bloomberg/SAP Fiori');
             console.log('🏢 companies variable actual:', companies);
             console.log('📊 companies.length:', companies.length);
 
             const container = document.getElementById('companiesContainer');
             console.log('📦 container elemento:', container);
 
-            if (companies.length === 0) {
-                console.log('⚠️ companies.length === 0, mostrando mensaje vacío');
-                container.innerHTML = `
-                    <div style="text-align: center; padding: 3rem; color: #7f8c8d;">
-                        <div style="font-size: 3em; margin-bottom: 1rem;">🏢</div>
-                        <h3>No hay empresas registradas</h3>
-                        <p>Comienza creando tu primera empresa</p>
-                    </div>
-                `;
+            if (!container) {
+                console.error('❌ No se encontró el contenedor companiesContainer');
                 return;
             }
 
-            let html = `
-                <table class="companies-table">
-                    <thead>
-                        <tr>
-                            <th>Empresa</th>
-                            <th>CUIT</th>
-                            <th>Estado</th>
-                            <th>Empleados</th>
-                            <th>Plan</th>
-                            <th>Módulos</th>
-                            <th>Total Mensual</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-            `;
-
-            companies.forEach(company => {
-                html += `
-                    <tr>
-                        <td>
-                            <div><strong>${company.name}</strong></div>
-                            <div style="font-size: 0.9em; color: #666;">${company.legalName}</div>
-                            <div style="font-size: 0.8em; color: #999;">${company.contactEmail}</div>
-                        </td>
-                        <td>${company.taxId}</td>
-                        <td>
-                            <span class="status-badge status-${company.status}">
-                                ${company.status === 'active' ? 'Activa' : company.status === 'trial' ? 'Prueba' : 'Suspendida'}
-                            </span>
-                        </td>
-                        <td>
-                            <div style="font-weight: bold; color: #2e7d32;">${company.currentEmployees || 0}</div>
-                            <div style="font-size: 0.8em; color: #666;">usuarios activos</div>
-                            <div style="font-weight: bold; color: #1976d2; margin-top: 4px;">${company.contractedEmployees || company.maxEmployees || 1}</div>
-                            <div style="font-size: 0.8em; color: #666;">empleados contratados</div>
-                        </td>
-                        <td>
-                            <div style="font-weight: bold; color: #1976d2;">
-                                ${company.licenseType || 'Básico'} (${company.maxEmployees})
+            // Usar el nuevo módulo Enterprise Companies Grid
+            if (typeof EnterpriseCompaniesGrid !== 'undefined') {
+                console.log('✅ Usando EnterpriseCompaniesGrid (Bloomberg/SAP Fiori style)');
+                EnterpriseCompaniesGrid.render(companies, container);
+            } else {
+                console.warn('⚠️ EnterpriseCompaniesGrid no disponible, usando fallback');
+                // Fallback a diseño simple si el módulo no carga
+                if (companies.length === 0) {
+                    container.innerHTML = `
+                        <div style="text-align: center; padding: 3rem; color: #7f8c8d;">
+                            <div style="font-size: 3em; margin-bottom: 1rem;">🏢</div>
+                            <h3>No hay empresas registradas</h3>
+                            <p>Comienza creando tu primera empresa</p>
+                        </div>
+                    `;
+                } else {
+                    // Render simplificado
+                    let html = '<div style="padding: 20px;">';
+                    companies.forEach(company => {
+                        html += `
+                            <div style="background: #f5f5f5; padding: 15px; margin-bottom: 10px; border-radius: 8px;">
+                                <h3>${company.name}</h3>
+                                <p>Módulos: ${company.modulesSummary ? company.modulesSummary.contractedModules : 'N/A'}</p>
+                                <button onclick="editCompany(${company.company_id})">Editar</button>
                             </div>
-                            <div style="font-size: 0.8em; color: #666;">
-                                Plan de hasta ${company.maxEmployees} empleados
-                            </div>
-                        </td>
-                        <td>
-                            <div style="font-weight: bold; color: #2e7d32;">
-                                ${company.modulesSummary ? `${company.modulesSummary.contractedModules}/${company.modulesSummary.totalSystemModules}` : 'N/A'}
-                            </div>
-                            <div style="font-size: 0.8em; color: #666;">
-                                Módulos contratados
-                            </div>
-                        </td>
-                        <td>
-                            <div style="font-weight: bold; color: var(--primary-color);">
-                                U$S ${Math.floor(company.pricing.monthlyTotal).toLocaleString('en-US')}<span style="font-size: 0.7em;">.${(company.pricing.monthlyTotal % 1).toFixed(2).substring(2)}</span>
-                            </div>
-                            <div style="font-size: 0.8em; color: #666;">
-                                Total mensual con IVA
-                            </div>
-                        </td>
-                        <td>
-                            <button class="btn btn-primary" onclick="editCompany(${company.company_id})" style="margin-right: 5px;">
-                                ✏️ Editar
-                            </button>
-                        </td>
-                    </tr>
-                `;
-            });
-
-            html += `
-                    </tbody>
-                </table>
-            `;
-
-            container.innerHTML = html;
-            // Ya no es necesario cargar módulos por separado - vienen del backend
+                        `;
+                    });
+                    html += '</div>';
+                    container.innerHTML = html;
+                }
+            }
         }
+
 
         // =============================
         // Función para cargar módulos reales desde la BD (TEMPORALMENTE DESHABILITADA)
@@ -15575,5 +15523,7 @@ ${vendor.notes || 'Sin notas adicionales'}
             }, 500);
         });
     </script>
+    <!-- 🎨 ENTERPRISE COMPANIES GRID - Bloomberg/SAP Fiori Style -->
+    <script src="/js/modules/enterprise-companies-grid.js"></script>
 </body>
 </html><!-- Version: 1763816963 -->
