FEAT: Modal Enterprise Styles - Diseño profesional amplio
Implementación completa de diseño enterprise para modal de edición de empresas:

✅ CARACTERÍSTICAS:
- 🖥️ Pantalla amplia (max-width: 1400px, 95% width)
- 📝 Tipografía optimizada (labels: 0.75rem, inputs: 0.85rem)
- 🎨 Gradient header profesional (#667eea → #764ba2)
- 📦 Espaciado compacto pero respirable (14px entre form groups)
- 🔘 Botones enterprise con hover effects
- 📱 Responsive completo (mobile, tablet, desktop)
- 💎 100% CSS overlay - NO modifica HTML ni JavaScript
- ✨ Mantiene toda la funcionalidad existente

📁 ARCHIVOS:
- NEW: backend/public/css/modal-enterprise-styles.css (400+ líneas)
- MODIFIED: backend/public/panel-administrativo.html (link CSS agregado)

🎯 CUMPLE REQUERIMIENTOS:
- "pantalla amplia" ✓
- "letra mediana a chica" ✓
- "buena visual integrada e intuitiva" ✓
- "no pierdas de vista la funcionalidad" ✓

🔗 Related: Enterprise Grid + Toggle Views + Read-only Viewer
📊 Progress: Rediseño UI Panel Administrativo 100% COMPLETO

--- a/backend/public/panel-administrativo.html
+++ b/backend/public/panel-administrativo.html
@@ -33,6 +33,9 @@
     <!-- 🏗️ ENGINEERING DASHBOARD - Visualización 3D del Sistema -->
     <link rel="stylesheet" href="css/engineering-dashboard.css">
 
+    <!-- 🏢 MODAL ENTERPRISE STYLES - Professional Edit Modal -->
+    <link rel="stylesheet" href="css/modal-enterprise-styles.css">
+
     <style>
         :root {
             --primary-color: #667eea;
