FIX: Agregar script view-toggle-and-readonly.js faltante
Script necesario para:
- ✅ Toggle Grid/Table view
- ✅ Botón "Ver" (read-only viewer)
- ✅ Funciones viewCompanyDetails(), toggleCompanyView()

El script estaba creado pero NO estaba cargado en el HTML.

--- a/backend/public/panel-administrativo.html
+++ b/backend/public/panel-administrativo.html
@@ -15516,5 +15516,8 @@ ${vendor.notes || 'Sin notas adicionales'}
     </script>
     <!-- 🎨 ENTERPRISE COMPANIES GRID - Bloomberg/SAP Fiori Style -->
     <script src="/js/modules/enterprise-companies-grid.js"></script>
+
+    <!-- 🔄 VIEW TOGGLE & READ-ONLY VIEWER - Grid/Table Toggle + View Button -->
+    <script src="/js/modules/view-toggle-and-readonly.js"></script>
 </body>
 </html><!-- Version: 1763816963 -->
