FIX: REPLACE DEMO modules with exact ISI modules (26)

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -8316,6 +8316,30 @@
                     <div class="module-desc" data-translate="dashboard_con_cpm_y_roadmap">Dashboard con CPM y roadmap</div>
                     <div class="module-status"><span class="module-status-dot"></span> Produccion</div>
                 </div>
+                <div class="module-card">
+                    <div class="module-icon cyan">📁</div>
+                    <div class="module-name" data-translate="gestion_documental">Gestión Documental (DMS)</div>
+                    <div class="module-desc" data-translate="workflow_validacion_documental">Workflow de validación documental multi-tenant</div>
+                    <div class="module-status"><span class="module-status-dot"></span> Produccion</div>
+                </div>
+                <div class="module-card">
+                    <div class="module-icon blue">👤</div>
+                    <div class="module-name" data-translate="mi_espacio">Mi Espacio</div>
+                    <div class="module-desc" data-translate="portal_personal_360">Portal personal con perfil 360° integrado</div>
+                    <div class="module-status"><span class="module-status-dot"></span> Produccion</div>
+                </div>
+                <div class="module-card">
+                    <div class="module-icon purple">📋</div>
+                    <div class="module-name" data-translate="manual_procedimientos">Manual de Procedimientos</div>
+                    <div class="module-desc" data-translate="jerarquia_documental_firma">Jerarquía documental con firma digital</div>
+                    <div class="module-status"><span class="module-status-dot"></span> Produccion</div>
+                </div>
+                <div class="module-card">
+                    <div class="module-icon orange">🦺</div>
+                    <div class="module-name" data-translate="hse_seguridad">Seguridad e Higiene (HSE)</div>
+                    <div class="module-desc" data-translate="gestion_epp_alertas">Gestión de EPP con alertas automáticas</div>
+                    <div class="module-status"><span class="module-status-dot"></span> Produccion</div>
+                </div>
             </div>
         </div>
     </section>
