--- a/backend/public/panel-administrativo.html
+++ b/backend/public/panel-administrativo.html
@@ -761,6 +761,8 @@
     <script src="js/modules/marketing-leads.js?v=20251218a" defer></script>
     <script src="js/modules/company-workflow.js" defer></script>
     <script src="js/modules/engineering-dashboard.js" defer></script>
+    <script src="js/modules/auto-healing-dashboard.js" defer></script>
+    <script src="js/modules/e2e-testing-control-v3-unified.js" defer></script>
     <script src="js/modules/ai-testing-dashboard.js?v=20251220a" defer></script>
     <script src="js/modules/aponnt-email-config.js?v=20251219c" defer></script>
     <script src="js/modules/support-supervisor-dashboard.js" defer></script>
