FEAT: Activar Risk Intelligence Dashboard 100% funcional con datos reales
**FRONTEND ACTIVADO:**
✅ Script compliance-dashboard.js cargado en panel-empresa.html
✅ Dashboard v2.0 completo con ModuleHelpSystem
✅ Dark theme compatible
✅ Sin datos hardcodeados - usa API real

**BACKEND ACTIVADO:**
✅ Rutas /api/compliance/* configuradas en server.js
✅ RiskIntelligenceService.js completo (46 KB)
✅ Consulta tablas REALES: attendances, users, sanctions, vacations
✅ Modelos BD verificados: CompanyRiskConfig, RiskBenchmark, OrganizationalPosition

**ENDPOINTS ACTIVOS:**
- GET /api/compliance/risk-dashboard - Dashboard completo
- GET /api/compliance/employee/:id/risk-analysis - Análisis individual
- GET /api/compliance/violations - Violaciones LCT
- GET /api/compliance/risk-config - Configuración de umbrales
- PUT /api/compliance/risk-config - Actualizar umbrales
- POST /api/compliance/risk-config/recalculate - Recalcular cuartiles
- GET /api/compliance/segmented-analysis - Análisis segmentado
- GET /api/compliance/export/* - Exportar reportes (PDF/Excel)

**CARACTERÍSTICAS:**
- Índices de riesgo: fatiga, accidente, reclamo legal, rendimiento, turnover
- Cálculo dinámico basado en datos reales de asistencia y sanciones
- Umbrales configurables por empresa (RBAC SSOT v3.0)
- 4 métodos de cálculo: manual, quartile, benchmark, hybrid
- Violaciones automáticas de LCT (Ley de Contrato de Trabajo)
- Reportes exportables en PDF y Excel
- Segmentación por tipo de trabajo (work_category)
- Benchmarks internacionales (OIT, OSHA, SRT Argentina)

**ACCESO:**
Panel Empresa → Módulo "Compliance Legal" ⚖️

**SIN DATOS HARDCODEADOS** - Todo se consulta de PostgreSQL en tiempo real

--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -2270,6 +2270,7 @@
     <script src="js/modules/predictive-workforce-dashboard.js"></script>
     <script src="js/modules/biometric-simple.js"></script>
     <script src="js/modules/biometric-consent.js"></script>
+    <script src="js/modules/compliance-dashboard.js"></script>
     <!-- biometric-dashboard.js: Dashboard central que agrupa todos los módulos biométricos -->
     <!-- biometric-simple.js: Sistema profesional con captura automática y feedback Azure -->
 
