--- a/backend/public/panel-empresa.html
+++ b/backend/public/panel-empresa.html
@@ -391,13 +391,23 @@
                             if (loadingDiv) loadingDiv.style.display = 'none';
                             // CREAR MÓDULOS DINÁMICAMENTE - SIMPLE Y DIRECTO
                             if (window.companyModules && window.companyModules.length > 0) {
+                                // 🎨 Helper function: Convert icon name to FontAwesome HTML
+                                const renderIcon = (icon) => {
+                                    if (!icon) return '📦'; // Default emoji
+                                    // If it's a FontAwesome icon name (e.g., "warehouse", "shopping-cart", "truck")
+                                    if (typeof icon === 'string' && !icon.includes('<') && !icon.match(/[\u{1F000}-\u{1F9FF}]/u)) {
+                                        return `<i class="fas fa-${icon}"></i>`;
+                                    }
+                                    return icon; // Return as-is (emoji or HTML)
+                                };
+
                                 const modulesContainer = document.getElementById('modulesContainer');
                                 if (modulesContainer) {
                                     let html = '<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 20px;">';
                                     window.companyModules.forEach((module, index) => {
                                         html += `
                                             <div data-module-id="${module.id}" data-module-name="${module.name}" data-action="openModuleDirect" class="module-card" style="border: 1px solid #ddd; border-radius: 8px; padding: 15px; text-align: center; background: white; cursor: pointer; transition: all 0.3s;" onmouseover="this.style.boxShadow='0 4px 8px rgba(0,0,0,0.1)'" onmouseout="this.style.boxShadow='none'">
-                                                <div style="font-size: 24px; margin-bottom: 10px;">${module.icon || '📦'}</div>
+                                                <div style="font-size: 24px; margin-bottom: 10px;">${renderIcon(module.icon)}</div>
                                                 <div style="font-weight: bold; margin-bottom: 5px;" data-translate="modules.${module.id}.title">${module.name}</div>
                                                 <div style="font-size: 12px; color: #666;" data-translate="modules.${module.id}.description">${module.description || ''}</div>
                                             </div>
@@ -4271,6 +4281,16 @@
 
     // FUNCIÓN AUXILIAR PARA CREAR UNA TARJETA INDIVIDUAL
     function createSingleModuleCard(systemModule, contractedModulesMap) {
+        // 🎨 Helper function: Convert icon name to FontAwesome HTML
+        const renderIcon = (icon) => {
+            if (!icon) return '📊'; // Default emoji
+            // If it's a FontAwesome icon name (e.g., "warehouse", "shopping-cart", "truck")
+            if (typeof icon === 'string' && !icon.includes('<') && !icon.match(/[\u{1F000}-\u{1F9FF}]/u)) {
+                return `<i class="fas fa-${icon}"></i>`;
+            }
+            return icon; // Return as-is (emoji or HTML)
+        };
+
         // Buscar si este módulo está contratado por la empresa
         const contractedModule = contractedModulesMap[systemModule.module_key];
 
@@ -4345,7 +4365,7 @@
                 overflow: hidden;
             ">
                 ${bannerStyle}
-                <span style="font-size: 6em; margin-bottom: 15px; display: block;">${systemModule.icon || '📊'}</span>
+                <span style="font-size: 6em; margin-bottom: 15px; display: block;">${renderIcon(systemModule.icon)}</span>
                 <h3 style="font-size: 16px; font-weight: bold; margin: 0 0 8px 0; color: #000000;">${systemModule.name}</h3>
                 <div style="font-size: 11px; color: #666666; font-weight: normal; margin-bottom: 10px;">${systemModule.rubro || 'General'}</div>
                 <div style="background: ${statusColor}; color: white; padding: 4px 8px; border-radius: 12px; font-size: 10px; font-weight: bold; display: inline-block; box-shadow: 0 1px 4px rgba(0,0,0,0.2);">
@@ -5634,6 +5654,16 @@
 
                 console.log('📦 [MODULES] Módulos procesados:', modules.length);
 
+                // 🎨 Helper function: Convert icon name to FontAwesome HTML
+                const renderIcon = (icon) => {
+                    if (!icon) return '📦'; // Default emoji
+                    // If it's a FontAwesome icon name (e.g., "warehouse", "shopping-cart", "truck")
+                    if (typeof icon === 'string' && !icon.includes('<') && !icon.match(/[\u{1F000}-\u{1F9FF}]/u)) {
+                        return `<i class="fas fa-${icon}"></i>`;
+                    }
+                    return icon; // Return as-is (emoji or HTML)
+                };
+
                 // Crear HTML con módulos - ESTILO BLANCO CON BORDE GRIS DEL BACKUP
                 let html = '<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; padding: 20px;">';
 
@@ -5646,7 +5676,7 @@
 
                     html += `
                         <div data-module-key="${module.id}" data-module-name="${moduleName}" data-clickable="true" data-action="showTab" class="module-card" style="border: 1px solid #ddd; border-radius: 8px; padding: 15px; text-align: center; background: white; cursor: pointer; transition: all 0.3s;" onmouseover="this.style.boxShadow='0 4px 8px rgba(0,0,0,0.1)'" onmouseout="this.style.boxShadow='none'">
-                            <div style="font-size: 24px; margin-bottom: 10px;">${moduleIcon}</div>
+                            <div style="font-size: 24px; margin-bottom: 10px;">${renderIcon(moduleIcon)}</div>
                             <div style="font-weight: bold; margin-bottom: 5px;">${moduleName}</div>
                             <div style="font-size: 12px; color: #666;">${moduleDescription}</div>
                         </div>
